--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@
 
 body {
   background: white;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Inter', sans-serif;
   color: rgb(12, 52, 75);
   color: rgb(61, 88, 102);
 }
